--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
 		<!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico"> -->
 		<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Pocket Chinese Astrology</title>
+		<title>Pocket Zodiac</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
