debugging user PATCH, start OAuth

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
 		<!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico"> -->
 		<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script src="https://accounts.google.com/gsi/client" async defer></script>
 		<title>Pocket Zodiac</title>
 	</head>
 	<body>
