--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
 		<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="https://accounts.google.com/gsi/client" async defer></script>
+		<script src="https://apis.google.com/js/api.js"></script>
 		<title>Pocket Zodiac</title>
 	</head>
 	<body>
