DRY Explore components, import fonts

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="https://accounts.google.com/gsi/client" async defer></script>
 		<script src="https://apis.google.com/js/api.js"></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Corben:wght@400;700&family=Milonga&display=swap?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 		<title>Pocket Zodiac</title>
 	</head>
 	<body>
